:lipstick: add a padding bottom to homepage container to prevent hidden movie behind footer

--- a/src/app/movies/movies.component.scss
+++ b/src/app/movies/movies.component.scss
@@ -4,6 +4,7 @@
 .homepage-container {
     background-color: $black;
     padding-top: 2rem;
+    padding-bottom: 10vh;
 
     .filter-genre {
         cursor: pointer;
